FACES-2159 Enable Liferay IDE to identify Liferay Faces demo/issue/test portlets as Liferay portlets

--- a/test/bridge-tck/bridge-tck-lifecycle-set-portlet/pom.xml
+++ b/test/bridge-tck/bridge-tck-lifecycle-set-portlet/pom.xml
@@ -91,6 +91,11 @@
 	<!-- but the "unpack" approach found below meets our needs better than the maven-assembly-plugin -->
 	<build>
 		<plugins>
+			<!-- FACES-2159: Liferay IDE requires liferay-maven-plugin to be specified -->
+			<plugin>
+				<groupId>com.liferay.maven.plugins</groupId>
+				<artifactId>liferay-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
