--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -187,6 +187,11 @@
 	</profiles>
 	<build>
 		<plugins>
+			<!-- FACES-2159: Liferay IDE requires liferay-maven-plugin to be specified -->
+			<plugin>
+				<groupId>com.liferay.maven.plugins</groupId>
+				<artifactId>liferay-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<artifactId>maven-install-plugin</artifactId>
 				<configuration>
