Added explicit liferay-maven-plugin section

--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -18,6 +18,15 @@
 		<module>showcase</module>
 	</modules>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.liferay.maven.plugins</groupId>
+				<artifactId>liferay-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 	<profiles>
 		<profile>
 			<id>licenses</id>
