--- a/issues/pom.xml
+++ b/issues/pom.xml
@@ -26,6 +26,10 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.liferay.maven.plugins</groupId>
+				<artifactId>liferay-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
