--- a/test/integration/demos/pom.xml
+++ b/test/integration/demos/pom.xml
@@ -26,4 +26,13 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.liferay.maven.plugins</groupId>
+				<artifactId>liferay-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
