FACES-1894 Add general utilities for Liferay Faces Alloy Components (Regen after adding the ability to deal with JSF reserved words and choose namespace. Added list of JSF reserved words.)

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -17,20 +17,73 @@ builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 builder.faces.version=4.2.0-m2
 builder.faces.renderer.base.parent.class=com.liferay.faces.alloy.renderkit.AlloyRendererBase
 builder.faces.component.default.parent.class=javax.faces.component.UIPanel
-builder.reserved.attributes=\
-	attributes,\
-	children,\
-	class,\
-	clientId,\
-	disabled,\
+builder.namespace=widget
+
+# This list is a list of attributes which have the same name but different meanings in JSF and Alloy. The
+# alloy-generator will resolve this name conflict by appending the value of builder.namespace to the beginning of the
+# attribute's name in methods and constants. If builder.namespace is not defined, then the component's name will be
+# appended to the beginning of the attribute's name instead.
+builder.namespaced.attributes=\
 	first,\
-	id,\
 	lang,\
-	parent,\
-	rendered,\
+	render,\
 	styleClass,\
-	value,\
-	widgetVar
+	widgetVar,\
+	attributes,\
+	childCount,\
+	children,\
+	clientBehaviors,\
+	clientId,\
+	compositeComponent,\
+	compositeComponentParent,\
+	containerClientId,\
+	convertedValue,\
+	converterMessage,\
+	currentComponent,\
+	currentCompositeComponent,\
+	defaultEventName,\
+	empty,\
+	eventNames,\
+	facesContext,\
+	facesListener,\
+	facet,\
+	facetCount,\
+	facets,\
+	facetsAndChildren,\
+	family,\
+	immediate,\
+	inView,\
+	listenersForEventClass,\
+	localValue,\
+	localValueSet,\
+	namingContainer,\
+	parent,\
+	renderer,\
+	rendererType,\
+	rendersChildren,\
+	required,\
+	requiredMessage,\
+	resourceBundleMap,\
+	stateHelper,\
+	submittedValue,\
+	transient,\
+	valid,\
+	validator,\
+	validatorMessage,\
+	validators,\
+	valueBinding,\
+	valueChangeListener,\
+	valueChangeListeners,\
+	valueExpression,\
+	visitable
+
+# This is a list of attributes that have the same name AND the same meaning in both JSF and AlloyUI. This list contains
+# a map of key/value pairs (separated by |). The key is attribute names, and the value is the attribute type in Java
+# defined by JSF.
+builder.jsf.reserved.attributes=\
+	id|String,\
+	rendered|boolean,\
+	value|Object
 
 ##
 ## Transformer
