fixed version typos

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -14,7 +14,7 @@ builder.copyright.year=2014
 
 builder.faces.output.dir=src/main/java
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
-builder.faces.version=4.2.0-m2
+builder.faces.version=3.2.5-ga6
 builder.faces.renderer.base.parent.class=com.liferay.faces.alloy.renderkit.AlloyRendererBase
 builder.faces.component.default.parent.class=javax.faces.component.UIPanel
 builder.namespace=widget
