FACES-1894 Add general utilities for Liferay Faces Alloy Components (Regen after fixing a type bug in the generator. Added comment in generator.properties about dealing with JSF reserved words on a component specific basis. Removed unnecessary elements in components-ext.xml, and added type element)

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -80,6 +80,10 @@ builder.namespaced.attributes=\
 # This is a list of attributes that have the same name AND the same meaning in both JSF and AlloyUI. This list contains
 # a map of key/value pairs (separated by |). The key is attribute names, and the value is the attribute type in Java
 # defined by JSF.
+# NOTE: this can also be done in components-ext.xml if it needs to be component specific. In the attribute tag simply
+# specify the following tags:
+# <jsfReservedAttribute>true</jsfReservedAttribute>
+# <jsfReservedAttributeType>type</jsfReservedAttributeType>
 builder.jsf.reserved.attributes=\
 	id|String,\
 	rendered|boolean,\
