FACES-1714 Develop Liferay Faces Showcase (added aceEditor general usage)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,4 +1,11 @@
+aui-aceeditor-general=The general usage of aui:aceEditor is to utilize it as an input field for editing source code. It supports various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
+aui-tabview-data-model=The [vdldoc:aui:tabView] component can display tabs dynamically when the [vdldoc:aui:tabView:value] attribute is bound via EL to a model bean property. The [vdldoc:aui:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+aui-tabview-general=The general usage of [vdldoc:aui:tabView] is to specify a static number of [vdldoc:aui:tab] child components.
+component=Component
 data-model=Data Model
 general=General
+model-value=Model Value
+rendered=Rendered
 source-code=Source Code
 usage=Usage
+vdl-documentation=VDL Documentation
