FACES-1895 Develop aui:datePicker component

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -92,8 +92,11 @@ builder.jsf.reserved.attributes=\
 ##
 ## Transformer
 ##
+default.javascript.type=Object
+
 transformer.comments.included=\
 	AceEditor,\
+	DatePicker,\
 	Rating,\
 	TabView,\
 	ThumbRating
@@ -135,7 +138,6 @@ transformer.components.excluded=\
 	DateCellEditor,\
 	DateMath,\
 	DateParser,\
-	DatePicker,\
 	DatePickerBase,\
 	DatePickerDelegate,\
 	DatePickerNative,\
