--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,5 +1,17 @@
 aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.AceEditor] is an *input* component that renders a field for editing source code text.
 aui-aceeditor-general=The component supports *color-coded text* for various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
+aui-datepicker=[javadoc:com.liferay.faces.alloy.component.datepicker.DatePicker] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
+aui-datepicker-date-pattern=A *custom pattern* can be specified via the [vdldoc:aui:datePicker:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
+aui-datepicker-general=The component can be attached to an input via the [vdldoc:aui:datePicker:for] attribute.
+aui-datepicker-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child of the input tag.
+aui-datepicker-localization=A *custom locale* can be specified via the [vdldoc:aui:datePicker:locale] attribute.
+aui-datepicker-localization-example-1=Hard coded Brazilian Portuguese locale.
+aui-datepicker-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL.
+aui-datepicker-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:aui:datePicker:minDate] and [vdldoc:aui:datePicker:maxDate] attributes.
+aui-datepicker-multiple-panes=The amount of month *panes* that are displayed can be specified via the [vdldoc:aui:datePicker:panes] attribute (maximum of 3).
+aui-datepicker-multiple-selection=The *date selection mode* can be specified via the [vdldoc:aui:datePicker:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:aui:datePicker:dateSeparator] attribute.
+aui-datepicker-multiple-selection-example-1=Hold down shift or control to select multiple dates.
+aui-datepicker-multiple-selection-example-2=Pop up the datePicker multiple times to select multiple dates.
 aui-starrating=[javadoc:com.liferay.faces.alloy.component.StarRating] is an *input* component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
 aui-starrating-default-value=A *default value* can be specified using one of two ways:
@@ -17,6 +29,7 @@ aui-thumbrating-general=The [vdldoc:aui:thumbRating:value] of the component must
 aui-thumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 component=Component
 data-model=Data Model
+date-pattern=Date Pattern
 description=Description
 dislike=Dislike
 example-1=Example #1
@@ -25,9 +38,16 @@ favorite=Favorite
 general=General
 instant-ajax=Instant Ajax
 like=Like
+locale-from-el=locale from EL
+localization=Localization
+min-max-date=Min/Max Date
 model-value=Model Value
+multiple-panes=Multiple Panes
+multiple-selection=Multiple Selection
+please-consider-using=Please consider using
 rendered=Rendered
 source-code=Source Code
+sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 usage=Usage
 vdl-documentation=VDL Documentation
