rebased as of 20140407_am: missing i18n

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -94,7 +94,9 @@ builder.jsf.reserved.attributes=\
 ##
 transformer.comments.included=\
 	AceEditor,\
-	TabView
+	Rating,\
+	TabView,\
+	ThumbRating
 
 transformer.components.excluded=\
 	Aria,\
@@ -193,7 +195,6 @@ transformer.components.excluded=\
 	ProgressBar,\
 	PropertyList,\
 	RadioCellEditor,\
-	Rating,\
 	Row,\
 	Scheduler,\
 	SchedulerAgendaView,\
@@ -219,7 +220,6 @@ transformer.components.excluded=\
 	TernarySearchTree,\
 	TextAreaCellEditor,\
 	TextCellEditor,\
-	ThumbRating,\
 	TimePicker,\
 	TimePickerBase,\
 	ToggleButton,\
