renamed showcase directory to starrating

--- a/demos/showcase/showcase-webapp/src/main/resources/aui.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/aui.properties
@@ -1,4 +1,4 @@
 aui_aceEditor=general:aceEditor.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java
-aui_rating=general:rating.xhtml|instant-ajax:rating.xhtml|data-model:rating.xhtml
+aui_starRating=general:starRating.xhtml,RatingModelBean.java|instant-ajax:starRating.xhtml,RatingModelBean.java|data-model:starRating.xhtml,RatingModelBean.java
 aui_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
 aui_thumbRating=general:thumbRating.xhtml
