first code review

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,12 +1,23 @@
 aui-aceeditor-general=The general usage of aui:aceEditor is to utilize it as an input field for editing source code. It supports various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
+aui-starrating-instant-ajax=Instant Ajax can be achieved by simply using the [vdldoc:f:ajax] tag, like it suggests in the JSF specification. 
+aui-starrating-general=An input component rendering a set of stars that a user may select to indicate their rating. Since it extends HtmlSelectOneRadio, it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.  There are two basic ways to use this component.
+aui-starrating-general-col1=1. Without a converter for a simple string value.
+aui-starrating-general-col2=2. With a converter for a Java Object value.
+aui-starrating-data-model=Displays stars dynamically when the child [vdldoc:f:selectItems:value] attribute is bound via EL to a model bean property. The [vdldoc:f:selectItems:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+aui-starrating-default-value=A default value can be specified in one of two ways.
+aui-starrating-default-value-col1=1. The JSF way.  Initializing the default value in the model bean.
+aui-starrating-default-value-col2=2. Setting the [vdldoc:aui:starRating:defaultSelected] attribute.
 aui-tabview-data-model=The [vdldoc:aui:tabView] component can display tabs dynamically when the [vdldoc:aui:tabView:value] attribute is bound via EL to a model bean property. The [vdldoc:aui:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 aui-tabview-general=The general usage of [vdldoc:aui:tabView] is to specify a static number of [vdldoc:aui:tab] child components.
 component=Component
 data-model=Data Model
+description=Description
+favorite=Favorite
 general=General
+instant-ajax=Instant Ajax
 model-value=Model Value
 rendered=Rendered
 source-code=Source Code
 usage=Usage
 vdl-documentation=VDL Documentation
-instant-ajax=Instant Ajax
+
