--- a/demos/showcase/showcase-webapp/src/main/resources/aui.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/aui.properties
@@ -1,4 +1,4 @@
 aui_aceEditor=general:aceEditor.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java
-aui_starRating=general:starRating.xhtml,RatingModelBean.java|instant-ajax:starRating.xhtml,RatingModelBean.java|data-model:starRating.xhtml,RatingModelBean.java
+aui_starRating=general:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|default-value:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|instant-ajax:starRating.xhtml,StarRatingModelBean.java|data-model:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java
 aui_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
-aui_thumbRating=general:thumbRating.xhtml,RatingModelBean.java|instant-ajax:thumbRating.xhtml,RatingModelBean.java
+aui_thumbRating=general:thumbRating.xhtml,ThumbRatingModelBean.java|instant-ajax:thumbRating.xhtml,ThumbRatingModelBean.java
