first code review.  all but the java.

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -9,15 +9,19 @@ aui-starrating-default-value-col1=1. The JSF way.  Initializing the default valu
 aui-starrating-default-value-col2=2. Setting the [vdldoc:aui:starRating:defaultSelected] attribute.
 aui-tabview-data-model=The [vdldoc:aui:tabView] component can display tabs dynamically when the [vdldoc:aui:tabView:value] attribute is bound via EL to a model bean property. The [vdldoc:aui:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 aui-tabview-general=The general usage of [vdldoc:aui:tabView] is to specify a static number of [vdldoc:aui:tab] child components.
+aui-thumbrating-instant-ajax=An input component rendering a pair of thumbs that a user may select to indicate their favor. Since it extends HtmlSelectOneRadio, it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.
 component=Component
 data-model=Data Model
 description=Description
+dislike=Dislike
 favorite=Favorite
 general=General
 instant-ajax=Instant Ajax
+like=Like
 model-value=Model Value
 rendered=Rendered
 source-code=Source Code
+submit=Submit
 usage=Usage
 vdl-documentation=VDL Documentation
 
