Updated build-alloy-api.sh to perform my workaround for all versions of alloy with 2.0.0 in the version. Excluded new components.

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -113,6 +113,7 @@ transformer.components.excluded=\
 	ButtonCore,\
 	ButtonExt,\
 	ButtonGroup,\
+	ButtonItem,\
 	ButtonSearchCancel,\
 	Carousel,\
 	CellEditorSupport,\
@@ -120,6 +121,7 @@ transformer.components.excluded=\
 	CheckboxCellEditor,\
 	Col,\
 	ColorPalette,\
+	ColorPicker,\
 	ColorPickerBase,\
 	ColorPickerPopover,\
 	Component,\
@@ -139,6 +141,9 @@ transformer.components.excluded=\
 	DatePickerNative,\
 	DatePickerNativeBase,\
 	DatePickerPopover,\
+	DatePickerSelect,\
+	DatepickerManager,\
+	DelayedTask,\
 	DiagramBuilder,\
 	DiagramBuilderBase,\
 	DiagramNode,\
@@ -152,6 +157,7 @@ transformer.components.excluded=\
 	DiagramNodeState,\
 	DiagramNodeTask,\
 	DropDownCellEditor,\
+	Editable,\
 	Field,\
 	FieldSupport,\
 	Fieldset,\
@@ -159,7 +165,6 @@ transformer.components.excluded=\
 	FormBuilderAvailableField,\
 	FormBuilderButtonField,\
 	FormBuilderCheckBoxField,\
-	FormBuilderField,\
 	FormBuilderField,\
 	FormBuilderFieldBase,\
 	FormBuilderFieldsetField,\
@@ -183,18 +188,29 @@ transformer.components.excluded=\
 	ImageGallery,\
 	ImageViewer,\
 	LinkedSet,\
+	LiveSearch,\
+	LoadingMask,\
 	MediaViewerPlugin,\
 	Modal,\
 	Node,\
 	NodeList,\
 	OptionsEditor,\
+	OverlayBase,\
+	OverlayContext,\
+	OverlayContextManager,\
+	OverlayContextPanel,\
+	OverlayContextPanelManager,\
+	OverlayManager,\
+	OverlayMask,\
 	Pagination,\
 	Palette,\
 	ParseContent,\
+	Plugin.IO,\
 	Popover,\
 	ProgressBar,\
 	PropertyList,\
 	RadioCellEditor,\
+	Resize,\
 	Row,\
 	Scheduler,\
 	SchedulerAgendaView,\
@@ -220,6 +236,7 @@ transformer.components.excluded=\
 	TernarySearchTree,\
 	TextAreaCellEditor,\
 	TextCellEditor,\
+	Textboxlist,\
 	TimePicker,\
 	TimePickerBase,\
 	ToggleButton,\
@@ -248,5 +265,5 @@ transformer.components.excluded=\
 	WidgetToolbars,\
 	WidgetTrigger
 
-transformer.input.json=${HOME}/.alloyui/alloy-build/alloy-ui-2.0.0/api/data.json
+transformer.input.json=${HOME}/.alloyui/alloy-build/alloy-ui-2.0.0-deprecated/api/data.json
 transformer.output.xml=target/alloy-generator/data.xml
