FACES-1915 Develop new aui:starRating and aui:thumbRating component tags

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,11 +1,34 @@
-aui-aceeditor-general=The general usage of aui:aceEditor is to utilize it as an input field for editing source code. It supports various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
-aui-tabview-data-model=The [vdldoc:aui:tabView] component can display tabs dynamically when the [vdldoc:aui:tabView:value] attribute is bound via EL to a model bean property. The [vdldoc:aui:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
-aui-tabview-general=The general usage of [vdldoc:aui:tabView] is to specify a static number of [vdldoc:aui:tab] child components.
+aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.AceEditor] is an *input* component that renders a field for editing source code text.
+aui-aceeditor-general=The component supports *color-coded text* for various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
+aui-starrating=[javadoc:com.liferay.faces.alloy.component.StarRating] is an *input* component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
+aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
+aui-starrating-default-value=A *default value* can be specified using one of two ways:
+aui-starrating-default-value-example-1=Initializing the default value in the model bean.
+aui-starrating-default-value-example-2=Setting the [vdldoc:aui:starRating:defaultSelected] attribute.
+aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute this component to a model bean property:
+aui-starrating-general-example-1=String value (no converter required)
+aui-starrating-general-example-2=Object value (requires a converter)
+aui-starrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+aui-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is an *iterator* component that renders tabs either statically or dynamically.
+aui-tabview-general=Tabs can be specified *statically* with [vdldoc:aui:tab] child tags.
+aui-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:aui:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:aui:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+aui-thumbrating=[javadoc:com.liferay.faces.alloy.component.ThumbRating] is an *input* component that renders a pair of thumb icons that a user can select to indicate their favor. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.
+aui-thumbrating-general=The [vdldoc:aui:thumbRating:value] of the component must be of type [javadoc:java.lang.Boolean].
+aui-thumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 component=Component
 data-model=Data Model
+description=Description
+dislike=Dislike
+example-1=Example #1
+example-2=Example #2
+favorite=Favorite
 general=General
+instant-ajax=Instant Ajax
+like=Like
 model-value=Model Value
 rendered=Rendered
 source-code=Source Code
+submit=Submit
 usage=Usage
 vdl-documentation=VDL Documentation
+
