--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,4 +1,4 @@
-aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.AceEditor] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
+aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.aceeditor.AceEditor] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 aui-aceeditor-general=The component supports *color-coded text* for various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
 aui-datepicker=[javadoc:com.liferay.faces.alloy.component.datepicker.DatePicker] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
 aui-datepicker-date-pattern=A *custom pattern* can be specified via the [vdldoc:aui:datePicker:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
@@ -13,7 +13,7 @@ aui-datepicker-multiple-selection=The *date selection mode* can be specified via
 aui-datepicker-multiple-selection-example-1=Hold down shift or control to select multiple dates
 aui-datepicker-multiple-selection-example-2=Pop up the datePicker multiple times to select multiple dates
 aui-input-date-benefits-description=since it combines date selection and text input in a single component.
-aui-starrating=[javadoc:com.liferay.faces.alloy.component.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
+aui-starrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
 aui-starrating-default-value=A *default value* can be specified using one of two ways:
 aui-starrating-default-value-example-1=Initializing the default value in the model bean.
