FACES-1714 Develop Liferay Faces Showcase (added portlet:actionURL)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -48,6 +48,8 @@ multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 note=Note
 please-consider-using=Please consider using
+portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
+portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, *one use-case* could be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
 portlet-namespace=[javadoc:com.liferay.faces.bridge.component.PortletNamespace] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get the portlet namespace.
 portlet-namespace-general=There are two basic ways to get the portlet namespace:
 portlet-namespace-general-example-1=Introducing a var into the EL
@@ -60,6 +62,7 @@ rendered=Rendered
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
+submit-non-faces-postback=Submit Non-Faces Postback
 usage=Usage
 valid-date-range=Valid Date Range
 vdl-documentation=VDL Documentation
