--- a/demos/showcase/showcase-webapp/src/main/resources/portlet.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/portlet.properties
@@ -1,3 +1,4 @@
+portlet_actionURL=general:actionURL.xhtml,ActionURLDemoPortlet.java
 portlet_namespace=general:namespace.xhtml
 portlet_renderURL=general:renderURL.xhtml
 portlet_resourceURL=general:resourceURL.xhtml
