FACES-1714 Develop Liferay Faces Showcase (added bridge:inputFile)

--- a/demos/showcase/showcase-portlet/pom.xml
+++ b/demos/showcase/showcase-portlet/pom.xml
@@ -18,6 +18,14 @@
 			<artifactId>portal-service</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>jsr250-api</artifactId>
 		</dependency>
