--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.aceeditor.AceEditor] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 aui-aceeditor-default-value=A *default value* can specified using when the [vdldoc:aui:aceEditor:value] attribute is bound via EL to a model bean property. In the example below, the default value of the sourceText property is set inside of the AceEditorModelBean.getSourceText() method.
 aui-aceeditor-general=The component supports *color-coded text* for various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
@@ -29,6 +30,8 @@ aui-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], 
 aui-thumbrating=[javadoc:com.liferay.faces.alloy.component.ThumbRating] is a [javadoc:javax.faces.component.UIInput] component that renders a pair of thumb icons that a user can select to indicate their favor. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.
 aui-thumbrating-general=The [vdldoc:aui:thumbRating:value] of the component must be of type [javadoc:java.lang.Boolean].
 aui-thumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
+bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads.  
 component=Component
 data-model=Data Model
 date-pattern=Date Pattern
