--- a/demos/showcase/showcase-webapp/src/main/resources/aui.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/aui.properties
@@ -1,5 +1,8 @@
 aui_aceEditor=general:aceEditor.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java|default-value:aceEditor.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java
+aui_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
+aui_commandButton=general:commandButton.xhtml|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandButtonModelBean.java,CommandButtonBackingBean.java,Customer.java
 aui_datePicker=general:datePicker.xhtml,DatePickerModelBean.java|instant-ajax:datePicker.xhtml,DatePickerModelBean.java|date-pattern:datePicker.xhtml,DatePickerModelBean.java|localization:datePicker.xhtml,DatePickerModelBean.java|min-max-date:datePicker.xhtml,DatePickerModelBean.java|multiple-panes:datePicker.xhtml,DatePickerModelBean.java|multiple-selection:datePicker.xhtml,DatePickerModelBean.java
+aui_icon=general:icon.xhtml
 aui_starRating=general:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|data-model:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|default-value:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|instant-ajax:starRating.xhtml,StarRatingModelBean.java
 aui_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
 aui_thumbRating=general:thumbRating.xhtml,ThumbRatingModelBean.java,ThumbRatingBackingBean.java|instant-ajax:thumbRating.xhtml,ThumbRatingModelBean.java,ThumbRatingBackingBean.java
